[package]
name = "mcp_server_puppeteer"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/mcp_server_puppeteer.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
zed_extension_api = "0.3.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

